; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_wpa_auth.c_wpa_auth_set_auth_alg.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_wpa_auth.c_wpa_auth_set_auth_alg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_state_machine = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wpa_auth_set_auth_alg(%struct.wpa_state_machine* %0, i32 %1) #0 {
  %3 = alloca %struct.wpa_state_machine*, align 8
  %4 = alloca i32, align 4
  store %struct.wpa_state_machine* %0, %struct.wpa_state_machine** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.wpa_state_machine*, %struct.wpa_state_machine** %3, align 8
  %6 = icmp ne %struct.wpa_state_machine* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.wpa_state_machine*, %struct.wpa_state_machine** %3, align 8
  %10 = getelementptr inbounds %struct.wpa_state_machine, %struct.wpa_state_machine* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  br label %11

11:                                               ; preds = %7, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
